# agent-loop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  CLI.md  DESIGN.md  EXPERIMENTS.md  PROVIDERS.md  SCENARIO_AUTHORING.md
scenarios/approval-loop/: scenario.toml  scripted_actions.json  skill.md
scenarios/approval-loop/checks/: verify.py
scenarios/hello-loop/: budget.toml  budget_actions.json  happy.toml  happy_actions.json  scenario.toml  scripted_actions.json  skill.md  zhipu.toml
scenarios/hello-loop/checks/: verify.py
scenarios/hello-loop/fixture/: requirements.txt
src/agent_loop/: __init__.py  __main__.py  agent.py  application.py  cli.py  config.py  context.py  engine.py  maas_agent.py  openai_agent.py  policy.py  storage.py  tools.py  types.py  verifier.py  workspace.py
src/agent_loop/providers/: __init__.py  base.py  openai.py  zhipu.py
tests/: __init__.py  test_application.py  test_cli.py  test_config_workspace.py  test_context_agent.py  test_engine.py  test_maas_providers.py  test_openai_agent.py  test_resume.py  test_storage.py  test_tools_policy.py  test_verifier.py
